--- a/deploy/kustomize/blog-service.yaml
+++ b/deploy/kustomize/blog-service.yaml
@@ -8,8 +8,13 @@ metadata:
 spec:
   ports:
   - port: 80
+    name: http
     protocol: TCP
     targetPort: 80
+  - port: 443
+    name: https
+    protocol: TCP
+    targetPort: 443
   selector:
     app: blog
   type: ClusterIP
