--- a/deploy/network/cloudflared.yaml
+++ b/deploy/network/cloudflared.yaml
@@ -3,6 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: cloudflared
+  namespace: blog
 spec:
   selector:
     matchLabels:
@@ -69,6 +70,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: cloudflared
+  namespace: blog
 data:
   config.yaml: |
     # Name of the tunnel you want to run
