--- a/deploy/gitops/oci-deploy.yaml
+++ b/deploy/gitops/oci-deploy.yaml
@@ -2,10 +2,11 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: blog
+  namespace: blog
 spec:
   prune: true
   interval: 1m
   sourceRef:
     kind: OCIRepository
     name: blog
-    namespace: default
+    namespace: blog
