--- a/config/_default/menu.toml
+++ b/config/_default/menu.toml
@@ -10,15 +10,15 @@
 [[social]]
 identifier = "github"
 name = "GitHub"
-url = "https://github.com/CaiJimmy/hugo-theme-stack"
+url = "https://github.com/reberp"
 
 [social.params]
 icon = "brand-github"
 
 [[social]]
-identifier = "twitter"
-name = "Twitter"
-url = "https://twitter.com"
+identifier = "Linkedin"
+name = "Linkedin"
+url = "https://www.linkedin.com/in/patrick-reber/"
 
 [social.params]
-icon = "brand-twitter"
+icon = "brand-linkedin"
