--- a/deploy/test/blog-test.yaml
+++ b/deploy/test/blog-test.yaml
@@ -15,5 +15,5 @@ spec:
         app: blog
     spec:
       containers:
-      - image: ghcr.io/reberp/test
+      - image: ghcr.io/reberp/personal-blog:latest
         name: blog
