--- a/deploy/network/cloudflared.yaml
+++ b/deploy/network/cloudflared.yaml
@@ -74,7 +74,7 @@ metadata:
 data:
   config.yaml: |
     # Name of the tunnel you want to run
-    tunnel: blog-tunnel
+    tunnel: blog-tunnel-2
     credentials-file: /etc/cloudflared/creds/credentials.json
     # Serves the metrics server under /metrics and the readiness server under /ready
     metrics: 0.0.0.0:2000
