--- a/deploy/blog/blog-np.yaml
+++ b/deploy/blog/blog-np.yaml
@@ -1,14 +1,20 @@
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: allow-cloudflared-ingress
+  name: np-blog-ie
   namespace: blog
 spec:
   podSelector: {}
   policyTypes:
   - Ingress
+  - Egress
   ingress:
   - from:
+    - namespaceSelector:
+        matchLabels:
+          kubernetes.io/metadata.name: cloudflared
+  egress:
+  - to:
     - namespaceSelector:
         matchLabels:
           kubernetes.io/metadata.name: cloudflared
