--- a/deploy/cloudflared/kustomization.yaml
+++ b/deploy/cloudflared/kustomization.yaml
@@ -2,5 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: cloudflared
 resources:
+  - ../base/
+  - cf-np.yaml
   - cloudflared.yaml
 
