--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -49,11 +49,8 @@ jobs:
         uses: docker/build-push-action@v5
         id: build
         with:
-          #context: .
-          #file: ./Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
-          # labels: ${{ steps.meta.outputs.labels }}
       
       - name: get hash
         run: |
@@ -82,27 +79,16 @@ jobs:
         id: generate-manifests
         run: |
           mkdir manifests
-          cd ./deploy/kustomize
-          
+          cd ./deploy/blog
           kustomize edit set image $IMAGE_NAME=$IMAGE_NAME@${{ needs.build_dockerfile_and_push.outputs.image-digest }}
           cd ../../
-          kustomize build ./deploy/kustomize  --output ./manifests
-          
-          ls ./manifests/
-          cat ./manifests/*
-
-          ls ./deploy/kustomize/
-          echo "kustomize produced:"
-          ls manifests/
+          kustomize build ./deploy/blog  --output ./manifests
       - name: Push manifests
         run: |
-          #flux push artifact $OCI_REPO:$(git rev-parse --short HEAD) \
           flux push artifact $OCI_REPO:latest \ #$(git rev-parse --short HEAD) \
             --path="./manifests" \
             --source="$(git config --get remote.origin.url)" \
-            --revision="latest@sha1:$(git rev-parse HEAD)"          
-            #--revision="$(git branch --show-current)@sha1:$(git rev-parse HEAD)"          
+            --revision="latest@sha1:$(git rev-parse HEAD)"
       - name: Deploy manifests to staging
         run: |
-          flux tag artifact $OCI_REPO:latest --tag $(git rev-parse --short HEAD)    
-          # flux tag artifact $OCI_REPO:$(git rev-parse --short HEAD) --tag staging   
+          flux tag artifact $OCI_REPO:latest --tag $(git rev-parse --short HEAD)
