--- a/deploy/blog/kustomization.yaml
+++ b/deploy/blog/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: blog
 resources:
+  - ../base/
   - blog-deploy.yaml
   - blog-service.yaml
   - blog-nginx-cm.yaml
