--- a/deploy/blog/np/kustomization.yaml
+++ b/deploy/blog/np/kustomization.yaml
@@ -1,8 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: cloudflared
+namespace: blog
 resources:
-  - ../base/
-  - cloudflared.yaml
-  - np/
-
+  - blog-dns.yaml
+  - blog-istio.yaml
+  - blog-np.yaml
