--- a/deploy/cloudflared/np/kustomization.yaml
+++ b/deploy/cloudflared/np/kustomization.yaml
@@ -2,7 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: cloudflared
 resources:
-  - ../base/
-  - cloudflared.yaml
-  - np/
-
+  - cf-dns.yaml
+  - cf-istio.yaml
+  - cf-np.yaml
